# pbpk-lite

./: .gitignore  LICENSE  README.md  pyproject.toml  ystem_generator(self.volumes, self.blood_flows, self.partition_coefficients, self.elimi
pbpk-lite/: LICENSE  README.md  pyproject.toml
pbpk-lite/src/pbpk_lite/: __init__.py  main.py  ode_system.py  solve.py
pbpk-lite/src/pbpk_test_2/: __init__.py  distribution_params.py  graph.py  main.py  ode_system.py  solve.py
src/pbpk_lite/: distribution_params.py  elimination.py  graph.py  main.py  ode_system.py  solve.py
